# MedRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-prod.yml  destroy-prod.yml  eval.yml  infrastructure.yml
deploy/: app.env.prod
deploy/nginx/: default.conf
docs/: aws-ec2-cicd-runbook.md
eval/: conftest.py
eval/medrag/: golden_dataset.json  test_medrag.py
eval/shared/: __init__.py  conftest.py  metrics.py
infra/cloudformation/: medrag-prod.parameters.example.json  medrag-prod.yml
scripts/: bootstrap-ec2.sh  deploy-prod.sh  destroy-prod.sh  package-deploy-bundle.sh  teardown-app.sh
src/: __init__.py  cli.py  wait_for.py
src/api/: __init__.py  main.py
src/core/: __init__.py  base.py  evals.py  generator.py  indexer.py  projects.py  retriever.py  schemas.py  service.py  settings.py  source_manager.py
src/projects/: __init__.py
src/projects/medrag/: __init__.py  config.py  ingestor.py
src/projects/medrag/data/: README.md
src/projects/medrag/data/evals/: medrag_latest.json
src/projects/medrag/data/guidelines/: README.md
src/projects/medrag/data/pubmed/: README.md
src/ui/: app.py
tests/core/: test_evals.py  test_indexer.py  test_projects.py  test_settings.py  test_source_manager.py
tests/projects/medrag/: test_ingestor.py
